Fix overflow problem of detailed doc

--- a/src/plugins/discover/public/application/components/default_discover_table/_table_cell.scss
+++ b/src/plugins/discover/public/application/components/default_discover_table/_table_cell.scss
@@ -2,6 +2,11 @@
   border-top: none !important;
 }
 
+// stylelint-disable-next-line @osd/stylelint/no_modifying_global_selectors
+.euiFlexItem.osdDocTable__detailsIconContainer {
+  margin-right: 0;
+}
+
 .osd-table td.osdDocTableCell__toggleDetails {
   padding: 5px 0 0 4px;
 }
